[package]
name = "crdt_multithread_backend"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-cors = "0.7"
once_cell = "1.17.0"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix_derive = "0.6.2"  # Provides Message derive macro
futures-util = "0.3"
redis = { version = "0.21", features = ["tokio-comp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mongodb = { version = "2.2", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }